Change footer marquee text to Bible verse

--- a/index.html
+++ b/index.html
@@ -79,9 +79,10 @@
     </header>
 
     <div class="footer-marquee">
-      <div class="footer-marquee-text">-[ D E N I A N G G A R A J A ]-</div>
+      <div class="footer-marquee-text">Filipi 4:13: “Segala perkara dapat kutanggung di dalam Dia yang memberi kekuatan kepadaku.”</div>
     </div>
 
     <script src="script-portal.js"></script>
   </body>
 </html>
+
