Adjust exam question count and instructions
Updated the exam instructions to reflect changes in the number of multiple-choice questions.

--- a/Pas_PAK_Kls_4/index.html
+++ b/Pas_PAK_Kls_4/index.html
@@ -27,7 +27,7 @@
         <input
           type="text"
           id="kelasSiswa"
-          placeholder="Kelas (contoh: 6A)..."
+          placeholder="Kelas (contoh: 4a)..."
         />
         <input type="password" id="password" placeholder="Password..." />
 
@@ -42,7 +42,7 @@
         <p>Selamat datang, <strong id="student-name-display">Siswa</strong>!</p>
         <ul>
           <li>
-            Ujian ini terdiri dari 35 soal Pilihan Ganda dan 15 soal Esai.
+            Ujian ini terdiri dari 30 soal Pilihan Ganda dan 15 soal Esai.
           </li>
           <li>Total waktu pengerjaan adalah <strong>90 menit</strong>.</li>
           <li>Pastikan koneksi internet Anda stabil.</li>
@@ -85,9 +85,9 @@
 
     <div id="results-container" class="container">
       <div class="content-box">
-        <h2>Ujian Selesai!</h2>
+        <h2>Asesmen Telah Selesai!</h2>
         <p>
-          Terima kasih telah menyelesaikan ujian,
+          Terima kasih telah menyelesaikan ujian, Tuhan Yesus Memberkati 
           <strong id="student-name-final">Siswa</strong>.
         </p>
         <p
@@ -110,3 +110,4 @@
     <script src="js/script.js"></script>
   </body>
 </html>
+
