--- a/Pas_PAK_Kls_4/index.html
+++ b/Pas_PAK_Kls_4/index.html
@@ -62,7 +62,7 @@
           </li>
         </ul>
         <p>Klik "Mulai Ujian" untuk masuk ke mode layar penuh dan memulai.</p>
-        <button id="start-exam-btn">Mulai Ujian</button>
+        <button id="start-exam-btn">Mulai Asesmen</button>
       </div>
     </div>
 
@@ -110,4 +110,5 @@
     <script src="js/script.js"></script>
   </body>
 </html>
+
 
