--- a/Pas_PAK_Kls_5/index.html
+++ b/Pas_PAK_Kls_5/index.html
@@ -27,7 +27,7 @@
         <input
           type="text"
           id="kelasSiswa"
-          placeholder="Kelas (contoh: 6A)..."
+          placeholder="Kelas (contoh: 5a)..."
         />
         <input type="password" id="password" placeholder="Password..." />
 
@@ -42,7 +42,7 @@
         <p>Selamat datang, <strong id="student-name-display">Siswa</strong>!</p>
         <ul>
           <li>
-            Ujian ini terdiri dari 35 soal Pilihan Ganda dan 15 soal Esai.
+            Ujian ini terdiri dari 25 soal Pilihan Ganda dan 20 soal Esai.
           </li>
           <li>Total waktu pengerjaan adalah <strong>90 menit</strong>.</li>
           <li>Pastikan koneksi internet Anda stabil.</li>
@@ -110,3 +110,4 @@
     <script src="js/script.js"></script>
   </body>
 </html>
+
